BugFix: SegmentEditor > when editing a segment, the text overlaps with icon

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -83,8 +83,8 @@ div.scrollable {
     padding: 6px 4px;
     border-radius: 3px;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: -1px;
+    top: -1px;
 }
 
 .segment-element .custom_select_search {
@@ -131,7 +131,7 @@ div.scrollable {
 }
 
 .segment-element .segment-nav h4.visits {
-    padding-left: 15px;
+    padding-left: 28px;
     background: url(plugins/SegmentEditor/images/icon-users.png) 0 0 no-repeat;
 }
 
